SubBt/force-app/main/default/objects/Selection_Category__c/Selection_Category__c.object-meta.xml
<CustomObject>
    <label>Selection Category (Dep)</label>
    <nameField>
        <label>Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Selection Categories (Dep)</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>