SubBt/force-app/main/default/objects/Selection_Category__c/fields/Category_Details__c.field-meta.xml
<CustomField>
    <fullName>Category_Details__c</fullName>
    <label>Category Details</label>
    <type>TextArea</type>
</CustomField>