SubBt/force-app/main/default/objects/Selection_Category__c/fields/Inactive_Date__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Date__c</fullName>
    <inlineHelpText>Date the Category is no longer Active for Selection.</inlineHelpText>
    <label>Inactive Date</label>
    <type>Date</type>
</CustomField>