SubBt/force-app/main/default/objects/Selection_Category__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is where the Customer will be purchasing the Selection Items from.</inlineHelpText>
    <label>Supplier</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Selection_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>