SubBt/force-app/main/default/objects/Selection_Category__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Category_Details__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Inactive_Date__c</columns>
    <columns>Supplier__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>